<resources>
    <string name="app_name">先知风水</string>
    <string name="title_activity_login">登录</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_login_edit_username">请输入账号</string>
    <string name="hint_login_edit_password">请输入密码</string>
    <string name="text_login">登录</string>
    <string name="text_forget_psd">忘记密码</string>
    <string name="text_register_at_once">立即注册</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="text_home">首页</string>
    <string name="text_discover">发现</string>
    <string name="text_shop">商城</string>
    <string name="text_me">我</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hot">最火</string>
    <string name="text_local">本地</string>
    <string name="text_all">全部</string>
    <string name="text_collect">收藏</string>
    <string name="text_my_master">我的大师</string>
    <string name="text_my_lecture">我的讲座</string>
    <string name="text_my_topic">我的话题</string>
    <string name="text_become_master">成为大师</string>
    <string name="text_help_and_feedback">帮助与反馈</string>
    <string name="text_setting">设置</string>
    <string name="title_activity_register">注册</string>
    <string name="text_register">注册</string>
    <string name="please_input_your_nickname">请输入昵称</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="please_input_your_phone_number">请输入手机号</string>
    <string name="text_get_verify_code">获取验证码</string>
    <string name="text_avatar">头像</string>
    <string name="text_nickname">昵称</string>
    <string name="text_real_name">真实姓名</string>
    <string name="text_gender">性别</string>
    <string name="text_age">年龄</string>
    <string name="text_address">所在城市</string>
    <string name="text_job">行业及个人简历</string>
    <string name="text_edit_user_info">编辑资料</string>
    <string name="text_save">保存</string>
    <string name="text_zhibi">知币</string>
    <string name="text_lecture">我的讲座</string>
    <string name="text_phone_number">手机号码</string>
    <string name="text_modify_password">修改密码</string>
    <string name="text_logout">退出登录</string>
    <string name="text_original_password">原密码</string>
    <string name="please_input_your_original_password">请输入原始密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_rule">6–20字符，区分大小写</string>
    <string name="text_confirm_password">确认密码</string>
    <string name="text_please_input_password_again">请再次输入密码</string>
    <string name="text_help_and_feed">帮助与反馈</string>
    <string name="text_about_proohet">关于先知</string>
    <string name="text_use_help">使用帮助</string>
    <string name="text_user_feed">用户反馈</string>
    <string name="text_email">邮箱</string>
    <string name="text_submit_feed">提交反馈</string>
    <string name="text_tip_feed">请输入您的意见和建议，我们将为您提供更好的服务</string>
    <string name="text_recharge">充值</string>
    <string name="text_my_account">我的账户</string>
    <string name="text_my_coupon">我的优惠券</string>
    <string name="text_invite_friends_to_have_gifts">邀请好友有礼</string>
    <string name="text_account_balance">账户余额</string>
    <string name="text_withdrawal">提现</string>
    <string name="text_my_bill">我的账单</string>
    <string name="text_my_bank_card">我的银行卡</string>
    <string name="text_recharge_amount">充值金额</string>
    <string name="text_arrival_amount">到账金额</string>
    <string name="text_pay_method">支付方式</string>
    <string name="text_alipay">支付宝</string>
    <string name="text_wechatpay">微信支付</string>
    <string name="text_unionpay">银联支付</string>
    <string name="text_pay">付款</string>
    <string name="text_recharge_dicount_tip_1">即日起至2017.01.01，先知客户端用户充值即享</string>
    <string name="text_recharge_discount_tip_2">充100送50</string>
    <string name="text_recharge_discount_tip_3">特大优惠！</string>
    <string name="title_activity_my_coupon">MyCouponActivity</string>
    <string name="text_coupon_info">点击邀请好友赢大礼！</string>
    <string name="text_search_for_master_and_topic">搜索大师、话题</string>
    <string name="text_message">消息</string>
    <string name="text_change_a_lot">换一批</string>
    <string name="text_hot_search">热门搜索</string>
    <string name="text_prophet_active">先知活动</string>
    <string name="text_service_notification">服务通知</string>
    <string name="text_system_message">系统消息</string>
    <string name="text_collect_master">收藏大师</string>
    <string name="text_master_detail">大师详情</string>
    <string name="text_single">单</string>
    <string name="text_collect_lecture">收藏讲座</string>
    <string name="text_lecture_detail">讲座详情</string>
    <string name="text_pay_success">支付成功</string>
    <string name="text_pay_failure">支付失败</string>

    <string name="empty_message">啥也没有</string>
    <string name="loading_message">请等一等啦ლ(╹◡╹ლ)</string>
    <string name="error_message">哎呀！发生了一些错误</string>

    <string name="empty_button">重试</string>
    <string name="loading_button">取消</string>
    <string name="error_button">重试</string>
    <string name="text_topic_detail">话题详情</string>
    <string name="text_topic_type">话题类别</string>
    <string name="text_topic_title">话题标题</string>
    <string name="text_please_input_topic_title">请在此输入话题标题</string>
    <string name="text_topic_content">话题内容</string>
    <string name="text_add_pic">添加图片</string>
    <string name="text_initiate_topic">发表话题</string>
    <string name="text_post">发帖</string>
    <string name="text_image">图片</string>
    <string name="text_confrim">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_private_message">私信</string>
    <string name="text_update">修改</string>
    <string name="symbol_required">*</string>
    <string name="text_please_input_your_name">请输入姓名</string>
    <string name="text_please_input_your_email">请输入邮箱</string>
    <string name="text_permanent_city">常驻城市</string>
    <string name="text_please_input_your_permanent_city">如：北京、上海</string>
    <string name="text_post_office">任职机构</string>
    <string name="text_please_input_your_post_office">如：中国风水研究院、自由职业者</string>
    <string name="text_job_title">职位头衔</string>
    <string name="text_please_input_your_job_title">如：商务科长</string>
    <string name="text_bill">账单</string>
    <string name="text_amount_of_bill">账单金额</string>
    <string name="text_type">类  型</string>
    <string name="text_time">时  间</string>
    <string name="text_transaction_id">交易单号</string>
    <string name="text_pay_type">支付方式</string>
    <string name="text_bill_detail">账单详情</string>
    <string name="text_message_center">消息中心</string>
    <string name="text_add_bank_card">添加银行卡</string>
    <string name="text_bank_card_id">卡号</string>
    <string name="text_please_input_your_bank_card_id">请输入您的银行卡卡号</string>
    <string name="text_bank_card_type">卡类型</string>
    <string name="text_choose_bank_card_type">选择银行卡类型</string>
    <string name="text_bank_card_owner">持卡人</string>
    <string name="text_please_input_bank_card_owner">请输入持卡人姓名</string>
    <string name="text_id_card">身份证号码</string>
    <string name="text_please_input_your_id_card">请输入持卡人身份证号码</string>
    <string name="text_reserve_phone_number">银行预留手机号</string>
    <string name="text_please_input_your_reserve_phone_number">请输入预留手机号</string>
    <string name="text_and_agree">并同意</string>
    <string name="text_user_agreement">用户协议</string>
    <string name="text_method_of_withdraw_crash">体现方式</string>
    <string name="text_amount_of_money">金额(元)</string>
    <string name="text_max_withdraw_crash">最多可提现金额88.8</string>
    <string name="text_account_of_alipay">支付宝账户</string>
    <string name="text_press_and_say">按住 说话</string>
    <string name="text_unpress_complete">松开 结束</string>
    <string name="text_please_instal_sdcard">请插入SD卡</string>
    <string name="text_unpress_to_cancel">松开手指，取消发送</string>
    <string name="text_picture">图片</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_send">发送</string>
    <string name="text_auth_login">第三方账号登录</string>
    <string name="text_sina_weibo">新浪微博</string>
    <string name="text_wx">微信</string>
    <string name="text_choose_all">全选</string>
    <string name="text_money_sum">合计：</string>
    <string name="text_about_master">关于大师</string>
    <string name="text_show_all">显示全部</string>
    <string name="text_sign_up">报名</string>
    <string name="text_order_detail">订单详情</string>
    <string name="text_coupon">优惠券</string>
    <string name="text_you_have_no_coupon">您当前没有可用优惠券，赶紧去领吧~</string>
    <string name="text_to_pay">去支付</string>
    <string name="text_verify_code">验证码</string>
    <string name="text_reset_password">重置密码</string>
    <string name="text_my_server">我的服务项目</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_start_level">评价星级</string>
    <string name="text_volume_rate">成交率</string>

    <array name="tag_search">
        <item>商务风水</item>
        <item>家居风水</item>
        <item>流年运势</item>
        <item>手相面相</item>
        <item>婚恋情感</item>
        <item>良辰吉时</item>
        <item>周公解梦</item>
        <item>阴宅风水</item>
    </array>
    <array name="item_my_master">
        <item>进行中</item>
        <item>已约见</item>
    </array>
    <array name="tag_initiate_topic">
        <item>事业•运势</item>
        <item>良辰•吉时</item>
        <item>选址•乔迁</item>
        <item>起名•测字</item>
        <item>家居•装修</item>
        <item>手相•面相</item>
        <item>学业•考试</item>
        <item>婚恋•情感</item>
    </array>
    <array name="select_initiate_topic">
        <item>拍照</item>
        <item>选择图片</item>
    </array>
    <array name="tab_master_detail">
        <item>服务项目</item>
        <item>关于大师</item>
        <item>客户评价</item>
        <item>大师文章</item>
    </array>
    <array name="tab_my_topic">
        <item>我发起的话题</item>
        <item>我参与的话题</item>
        <item>我关注的话题</item>
    </array>
    <array name="gender">
        <item>保密</item>
        <item>男</item>
        <item>女</item>
    </array>

</resources>
