<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">
    <include
        layout="@layout/layout_base_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:layout_marginTop="15px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:ems="3"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_bank_card_id"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginLeft="40px"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:singleLine="true"
            android:hint="@string/text_please_input_your_bank_card_id"/>
        <ImageView
            android:layout_width="17px"
            android:layout_height="27px"
            android:src="@drawable/arrow_right_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:layout_marginTop="15px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:ems="3"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_bank_card_type"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginLeft="40px"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:singleLine="true"
            android:editable="false"
            android:hint="@string/text_choose_bank_card_type"/>
        <ImageView
            android:layout_width="17px"
            android:layout_height="27px"
            android:src="@drawable/arrow_right_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:layout_marginTop="15px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:ems="3"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_bank_card_owner"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:layout_marginLeft="40px"
            android:singleLine="true"
            android:hint="@string/text_please_input_bank_card_owner"/>
        <ImageView
            android:layout_width="17px"
            android:layout_height="27px"
            android:src="@drawable/arrow_right_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:layout_marginTop="15px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_id_card"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:layout_marginLeft="40px"
            android:singleLine="true"
            android:hint="@string/text_please_input_your_id_card"/>
        <ImageView
            android:layout_width="17px"
            android:layout_height="27px"
            android:src="@drawable/arrow_right_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:layout_marginTop="15px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_reserve_phone_number"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:layout_marginLeft="40px"
            android:singleLine="true"
            android:hint="@string/text_please_input_your_reserve_phone_number"/>
        <ImageView
            android:layout_width="17px"
            android:layout_height="27px"
            android:src="@drawable/arrow_right_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:gravity="bottom"
        android:layout_marginTop="30px">
        <ImageView
            android:layout_width="25px"
            android:layout_height="25px"
            android:src="@drawable/selector_add_bank_card_agree"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_smallest"
            android:textColor="@color/text_gray"
            android:layout_marginLeft="8px"
            android:text="@string/text_and_agree"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_smallest"
            android:textColor="@color/orange"
            android:layout_marginLeft="8px"
            android:text="@string/text_user_agreement"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_larger"
        android:layout_marginTop="90px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:text="添加"
        android:background="@drawable/selector_corner_orange_btn"
        />
</LinearLayout>