<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:paddingRight="40px"
        android:paddingLeft="40px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:minEms="4"
            android:text="@string/text_real_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_smallest"
            android:textColor="@color/text_red"
            android:text="@string/symbol_required"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:background="@null"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:hint="@string/text_please_input_your_name"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:paddingRight="40px"
        android:paddingLeft="40px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:minEms="4"
            android:text="@string/text_phone_number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_smallest"
            android:textColor="@color/text_red"
            android:text="@string/symbol_required"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:background="@null"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:hint="@string/please_input_your_phone_number"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:paddingRight="40px"
        android:paddingLeft="40px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:minEms="4"
            android:text="@string/text_email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_smallest"
            android:textColor="@color/text_red"
            android:text="@string/symbol_required"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:background="@null"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:hint="@string/text_please_input_your_email"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:paddingRight="40px"
        android:paddingLeft="40px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:minEms="4"
            android:text="@string/text_permanent_city"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_smallest"
            android:textColor="@color/text_red"
            android:text="@string/symbol_required"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:background="@null"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:hint="@string/text_please_input_your_permanent_city"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:paddingRight="40px"
        android:paddingLeft="40px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:minEms="4"
            android:text="@string/text_post_office"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:background="@null"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:hint="@string/text_please_input_your_post_office"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:paddingRight="40px"
        android:paddingLeft="40px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:minEms="4"
            android:text="@string/text_job_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:background="@null"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:hint="@string/text_please_input_your_job_title"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn_infomation_next"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:background="@color/orange"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"
        android:text="下一步"/>
</LinearLayout>