<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">
    <include
        layout="@layout/layout_base_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:layout_marginTop="14px"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="4"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/text_phone_number"/>
        <EditText
            android:id="@+id/edit_reset_password_phone_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            android:inputType="phone"
            android:hint="@string/please_input_your_phone_number"
            />
        <TextView
            android:id="@+id/btn_reset_password_get_verify_code"
            android:layout_width="173px"
            android:layout_height="47px"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/orange"
            android:gravity="center"
            android:background="@drawable/shape_orange_strok_corner8"
            android:text="@string/text_get_verify_code"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white"
        android:paddingRight="40px"
        android:paddingLeft="40px">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/spline_color"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="4"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/text_verify_code"/>
        <EditText
            android:id="@+id/edit_reset_verify_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            android:inputType="textVisiblePassword"
            android:hint="@string/please_input_verify_code"
            />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white"
        android:paddingRight="40px"
        android:paddingLeft="40px">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/spline_color"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@color/white"
        android:paddingLeft="40px"
        android:gravity="center_vertical"
        android:paddingRight="40px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="4"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/text_new_password"/>
        <EditText
            android:id="@+id/edit_reset_password_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            android:inputType="textVisiblePassword"
            android:hint="@string/hint_login_edit_password"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginTop="90px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@drawable/selector_corner_orange_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:text="@string/text_reset_password"
        />

</LinearLayout>