<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">
    <include
        layout="@layout/layout_base_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:orientation="horizontal"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:layout_marginTop="17px"
        android:gravity="center_vertical"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/black"
            android:text="@string/text_method_of_withdraw_crash"/>
        <TextView
            android:layout_width="187px"
            android:layout_height="45px"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/orange"
            android:gravity="center"
            android:text="@string/text_account_of_alipay"
            android:layout_marginLeft="65px"
            android:background="@drawable/shape_orange_strok_corner8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:orientation="horizontal"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:layout_marginTop="17px"
        android:gravity="center_vertical"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/black"
            android:text="@string/text_amount_of_money"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:hint="@string/text_max_withdraw_crash"
            android:layout_marginLeft="65px"
            android:background="@null"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_smallest"
        android:textColor="@color/text_red"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_marginTop="28px"
        android:text="提现金额大于5元，可进行提现操作，不满200元，需扣除5元手续费"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginTop="60px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@drawable/selector_corner_orange_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_larger"
        android:text="@string/text_withdrawal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="36px"
        android:text="最晚到账时间：2016-10-06 22:46"/>
</LinearLayout>